--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -380,7 +380,7 @@
 
     <!-- Option for GB dark theme -->
     <string name="pref_gb_theme_dark_title">Usa il tema Holo Dark</string>
-    <string name="pref_gb_theme_dark_summary">Passa a interfaccia GB per usare il tema Holo Dark invece di Holo Light</string>
+    <string name="pref_gb_theme_dark_summary">Cambia interfaccia di GB, usa il tema Holo Dark invece di Holo Light</string>
 
     <!-- Clear all recents positions -->
     <string name="recent_clear_off">Off</string>
